// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Events reducer RECEIVE_CMS_DATA action decodes events 1`] = `
Array [
  Object {
    "contentType": "event",
    "fields": Object {
      "accessibilityDetails": "accessibilityDetails",
      "accessibilityOptions": Array [
        "O84a35poabxKTJm2d5",
      ],
      "addressLine1": "addressLine1",
      "addressLine2": "addressLine2",
      "audience": Array [
        "p7m",
        "75ckc33EMZTM3",
      ],
      "city": "city",
      "email": "email",
      "endTime": "2018-07-07T03:00+00:00",
      "eventCategories": Array [
        "Nightlife",
        "Social and Networking",
        "Community",
        "Health",
        "Sports and Activities",
      ],
      "eventDescription": "eventDescription",
      "eventPriceHigh": 10,
      "eventPriceLow": 0,
      "eventsListPicture": Object {
        "sys": Object {
          "id": "MAj35v",
        },
      },
      "individualEventPicture": Object {
        "sys": Object {
          "id": "385c4r7oSUdL3lRN",
        },
      },
      "location": Object {
        "lat": 0,
        "lon": 10,
      },
      "locationName": "locationName",
      "name": "name",
      "performances": Array [
        Object {
          "sys": Object {
            "id": "T5T",
          },
        },
        Object {
          "sys": Object {
            "id": "dt29BrPh",
          },
        },
      ],
      "phone": "phone",
      "postcode": "postcode",
      "recurrenceDates": Array [
        "10/07/2018",
        "07/07/2018",
        "20/06/2018",
      ],
      "stage": false,
      "startTime": "2018-07-07T00:00+00:00",
      "ticketingUrl": "ticketingUrl",
      "venueDetails": Array [
        "6em2PtRZIhYQiRF44",
        "Z7Z7T6bfuo7qFFz4s3fVA1LYD3lnx",
        "XLrUX5MxwxR9qRvT8t4F3",
        "7LIDGAlkK3Xg",
        "jP6n64T086sxr3sTpxGPLO05J",
      ],
    },
    "id": "r22",
    "locale": "en-GB",
    "revision": 1,
  },
  Object {
    "contentType": "event",
    "fields": Object {
      "accessibilityDetails": "accessibilityDetails",
      "accessibilityOptions": Array [
        "O84a35poabxKTJm2d5",
      ],
      "addressLine1": "addressLine1",
      "addressLine2": "addressLine2",
      "audience": Array [
        "p7m",
        "75ckc33EMZTM3",
      ],
      "city": "city",
      "email": "email",
      "endTime": "2018-07-10T03:00+00:00",
      "eventCategories": Array [
        "Nightlife",
        "Social and Networking",
        "Community",
        "Health",
        "Sports and Activities",
      ],
      "eventDescription": "eventDescription",
      "eventPriceHigh": 10,
      "eventPriceLow": 0,
      "eventsListPicture": Object {
        "sys": Object {
          "id": "MAj35v",
        },
      },
      "individualEventPicture": Object {
        "sys": Object {
          "id": "385c4r7oSUdL3lRN",
        },
      },
      "location": Object {
        "lat": 0,
        "lon": 10,
      },
      "locationName": "locationName",
      "name": "name",
      "performances": Array [
        Object {
          "sys": Object {
            "id": "T5T",
          },
        },
        Object {
          "sys": Object {
            "id": "dt29BrPh",
          },
        },
      ],
      "phone": "phone",
      "postcode": "postcode",
      "recurrenceDates": Array [
        "07/07/2018",
        "10/07/2018",
        "07/07/2018",
        "20/06/2018",
      ],
      "stage": false,
      "startTime": "2018-07-10T00:00+00:00",
      "ticketingUrl": "ticketingUrl",
      "venueDetails": Array [
        "6em2PtRZIhYQiRF44",
        "Z7Z7T6bfuo7qFFz4s3fVA1LYD3lnx",
        "XLrUX5MxwxR9qRvT8t4F3",
        "7LIDGAlkK3Xg",
        "jP6n64T086sxr3sTpxGPLO05J",
      ],
    },
    "id": "r22-recurrence-10/07/2018",
    "locale": "en-GB",
    "revision": 1,
  },
  Object {
    "contentType": "event",
    "fields": Object {
      "accessibilityDetails": "accessibilityDetails",
      "accessibilityOptions": Array [
        "O84a35poabxKTJm2d5",
      ],
      "addressLine1": "addressLine1",
      "addressLine2": "addressLine2",
      "audience": Array [
        "p7m",
        "75ckc33EMZTM3",
      ],
      "city": "city",
      "email": "email",
      "endTime": "2018-06-20T03:00+00:00",
      "eventCategories": Array [
        "Nightlife",
        "Social and Networking",
        "Community",
        "Health",
        "Sports and Activities",
      ],
      "eventDescription": "eventDescription",
      "eventPriceHigh": 10,
      "eventPriceLow": 0,
      "eventsListPicture": Object {
        "sys": Object {
          "id": "MAj35v",
        },
      },
      "individualEventPicture": Object {
        "sys": Object {
          "id": "385c4r7oSUdL3lRN",
        },
      },
      "location": Object {
        "lat": 0,
        "lon": 10,
      },
      "locationName": "locationName",
      "name": "name",
      "performances": Array [
        Object {
          "sys": Object {
            "id": "T5T",
          },
        },
        Object {
          "sys": Object {
            "id": "dt29BrPh",
          },
        },
      ],
      "phone": "phone",
      "postcode": "postcode",
      "recurrenceDates": Array [
        "07/07/2018",
        "10/07/2018",
        "07/07/2018",
        "20/06/2018",
      ],
      "stage": false,
      "startTime": "2018-06-20T00:00+00:00",
      "ticketingUrl": "ticketingUrl",
      "venueDetails": Array [
        "6em2PtRZIhYQiRF44",
        "Z7Z7T6bfuo7qFFz4s3fVA1LYD3lnx",
        "XLrUX5MxwxR9qRvT8t4F3",
        "7LIDGAlkK3Xg",
        "jP6n64T086sxr3sTpxGPLO05J",
      ],
    },
    "id": "r22-recurrence-20/06/2018",
    "locale": "en-GB",
    "revision": 1,
  },
]
`;

exports[`Events reducer RECEIVE_CMS_DATA action expands recurring events 1`] = `
Array [
  Object {
    "contentType": "event",
    "fields": Object {
      "accessibilityDetails": "accessibilityDetails",
      "accessibilityOptions": Array [
        "FM6jre",
        "b8Y2Ioy1qEC",
        "0D98Lcd5il86y1sf4685Ba3s3RbTi4",
      ],
      "addressLine1": "addressLine1",
      "addressLine2": "addressLine2",
      "audience": Array [
        "X2T77u30HfGQ978Ce",
        "IsJqxf058AxsLcfAP7451huX7",
        "",
      ],
      "city": "city",
      "email": "email",
      "endTime": "2018-08-02T03:00+00:00",
      "eventCategories": Array [
        "Exhibition and Tours",
        "Community",
      ],
      "eventDescription": "eventDescription",
      "eventPriceHigh": 10,
      "eventPriceLow": 0,
      "eventsListPicture": Object {
        "sys": Object {
          "id": "7qByW",
        },
      },
      "individualEventPicture": Object {
        "sys": Object {
          "id": "pI1b5E4m4z",
        },
      },
      "location": Object {
        "lat": 0,
        "lon": 10,
      },
      "locationName": "locationName",
      "name": "name",
      "performances": Array [
        Object {
          "sys": Object {
            "id": "97hZrki0698g88ozhhp",
          },
        },
        Object {
          "sys": Object {
            "id": "48V92917",
          },
        },
        Object {
          "sys": Object {
            "id": "u6dtAeCrx2QtSFw7tlYU8Bt2Pgh",
          },
        },
        Object {
          "sys": Object {
            "id": "Qo9LdGIwhTV3VTYF5U5E1g4",
          },
        },
      ],
      "phone": "phone",
      "postcode": "postcode",
      "recurrenceDates": Array [
        "03/08/2018",
        "04/08/2018",
      ],
      "stage": false,
      "startTime": "2018-08-02T00:00+00:00",
      "ticketingUrl": "ticketingUrl",
      "venueDetails": Array [
        "TBIuOS1mRo7nM",
        "BKX3JLP68i0k2e",
      ],
    },
    "id": "l503MHwD",
    "locale": "en-GB",
    "revision": 1,
  },
  Object {
    "contentType": "event",
    "fields": Object {
      "accessibilityDetails": "accessibilityDetails",
      "accessibilityOptions": Array [
        "FM6jre",
        "b8Y2Ioy1qEC",
        "0D98Lcd5il86y1sf4685Ba3s3RbTi4",
      ],
      "addressLine1": "addressLine1",
      "addressLine2": "addressLine2",
      "audience": Array [
        "X2T77u30HfGQ978Ce",
        "IsJqxf058AxsLcfAP7451huX7",
        "",
      ],
      "city": "city",
      "email": "email",
      "endTime": "2018-08-03T03:00+00:00",
      "eventCategories": Array [
        "Exhibition and Tours",
        "Community",
      ],
      "eventDescription": "eventDescription",
      "eventPriceHigh": 10,
      "eventPriceLow": 0,
      "eventsListPicture": Object {
        "sys": Object {
          "id": "7qByW",
        },
      },
      "individualEventPicture": Object {
        "sys": Object {
          "id": "pI1b5E4m4z",
        },
      },
      "location": Object {
        "lat": 0,
        "lon": 10,
      },
      "locationName": "locationName",
      "name": "name",
      "performances": Array [
        Object {
          "sys": Object {
            "id": "97hZrki0698g88ozhhp",
          },
        },
        Object {
          "sys": Object {
            "id": "48V92917",
          },
        },
        Object {
          "sys": Object {
            "id": "u6dtAeCrx2QtSFw7tlYU8Bt2Pgh",
          },
        },
        Object {
          "sys": Object {
            "id": "Qo9LdGIwhTV3VTYF5U5E1g4",
          },
        },
      ],
      "phone": "phone",
      "postcode": "postcode",
      "recurrenceDates": Array [
        "02/08/2018",
        "03/08/2018",
        "04/08/2018",
      ],
      "stage": false,
      "startTime": "2018-08-03T00:00+00:00",
      "ticketingUrl": "ticketingUrl",
      "venueDetails": Array [
        "TBIuOS1mRo7nM",
        "BKX3JLP68i0k2e",
      ],
    },
    "id": "l503MHwD-recurrence-03/08/2018",
    "locale": "en-GB",
    "revision": 1,
  },
  Object {
    "contentType": "event",
    "fields": Object {
      "accessibilityDetails": "accessibilityDetails",
      "accessibilityOptions": Array [
        "FM6jre",
        "b8Y2Ioy1qEC",
        "0D98Lcd5il86y1sf4685Ba3s3RbTi4",
      ],
      "addressLine1": "addressLine1",
      "addressLine2": "addressLine2",
      "audience": Array [
        "X2T77u30HfGQ978Ce",
        "IsJqxf058AxsLcfAP7451huX7",
        "",
      ],
      "city": "city",
      "email": "email",
      "endTime": "2018-08-04T03:00+00:00",
      "eventCategories": Array [
        "Exhibition and Tours",
        "Community",
      ],
      "eventDescription": "eventDescription",
      "eventPriceHigh": 10,
      "eventPriceLow": 0,
      "eventsListPicture": Object {
        "sys": Object {
          "id": "7qByW",
        },
      },
      "individualEventPicture": Object {
        "sys": Object {
          "id": "pI1b5E4m4z",
        },
      },
      "location": Object {
        "lat": 0,
        "lon": 10,
      },
      "locationName": "locationName",
      "name": "name",
      "performances": Array [
        Object {
          "sys": Object {
            "id": "97hZrki0698g88ozhhp",
          },
        },
        Object {
          "sys": Object {
            "id": "48V92917",
          },
        },
        Object {
          "sys": Object {
            "id": "u6dtAeCrx2QtSFw7tlYU8Bt2Pgh",
          },
        },
        Object {
          "sys": Object {
            "id": "Qo9LdGIwhTV3VTYF5U5E1g4",
          },
        },
      ],
      "phone": "phone",
      "postcode": "postcode",
      "recurrenceDates": Array [
        "02/08/2018",
        "03/08/2018",
        "04/08/2018",
      ],
      "stage": false,
      "startTime": "2018-08-04T00:00+00:00",
      "ticketingUrl": "ticketingUrl",
      "venueDetails": Array [
        "TBIuOS1mRo7nM",
        "BKX3JLP68i0k2e",
      ],
    },
    "id": "l503MHwD-recurrence-04/08/2018",
    "locale": "en-GB",
    "revision": 1,
  },
]
`;

exports[`Events reducer initialises with default state 1`] = `
Object {
  "amenities": Array [],
  "events": Array [],
  "featuredEvents": Array [],
  "headerBanners": Array [],
  "images": Object {},
  "loading": true,
  "noDataReceived": false,
  "paradeGroups": Array [],
  "performances": Object {},
  "refreshing": false,
  "sponsors": Array [],
}
`;
